# read_mnist

./: README.md
src/: CMakeLists.txt  main.c  read_mnist.h
