cmake_minimum_required(VERSION 2.8)
project(read_mnist)
#set(CMAKE_C_FLAGS "-Wall")
set(CMAKE_BINARY_DIR ${CMAKE_BINARY_DIR})
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
include_directories("${PROJECT_SOURCE_DIR}")
add_executable(read_mnist ${PROJECT_SOURCE_DIR}/main.c)
#target_link_libraries(read_mnist NONE)
